acl (2.2.52-5) UNRELEASED; urgency=medium

  * Fix upstream test suite:
    - Fix perl warning due to deprecated regex construct.
    - Fix expected test results, and ls command output.

 -- Guillem Jover <guillem@debian.org>  Sat, 16 Feb 2019 03:20:41 +0100

acl (2.2.52-4) unstable; urgency=medium

  * Salvage package, with ok from co-maintainer.
    Thanks for all their past work on this package. Closes: #921974
    - The updated Vcs fields point to the Debian packaging. Closes: #909308
  * Remove debian/Makefile and stop removing doc dirs from debian/rules.
    - Add patch to avoid upstream Makefile entering the debian/ directory.
  * Update upstream URL (https) in debian/watch file.
  * Update debian/watch to format version 4.
  * Line-wrap and add a trailing comma to dependency field values.
  * Update Homepage field URL to use https.
  * Update debian/copyright:
    - Remove original packaging information, present in the changelog.
    - Switch to machine parseable format 1.0.
    - Update copyright statements.
  * Remove ancient Conflicts against acl, kerberos4kth packages.
  * Remove obsolete Priority extra.
  * Remove Priority required from shared library package.
  * Cleanup debian/rules:
    - Use $(CURDIR) instead of `pwd`.
    - Remove phase prints and comment out DH_VERBOSE, make is verbose enough.
    - Use dpkg architecture.mk fragment instead of ad-hoc variable assignment.
    - Use dh_testdir instead of open-coding it.
    - Use dh_testroot instead of open-coding it.
    - Use dh_clean instead of ad-hoc cleaning.
    - Do not create an upstream source tarball distribution.
    - Remove unused stdenv variable.
    - Use dh_installchangelogs instead of juggling doc/CHANGES around.
    - Use dh_install, dh_installdocs, dh_installman and dh_link instead of
      calling the upstream build system multiple times to install into the
      package dirs.
    - Rename LOCAL_CONFIGURE_OPTIONS to confflags.