@@ -1,0 +1,6 @@
+#!/bin/sh
+
+set -e
+
+./configure
+make -C test root-tests
